--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -3,4 +3,39 @@
     height: 20vh;
     border-radius: 4%;
 }
-content-his
+.container-home{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 15vh;
+}
+.content-home{
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    height: 20vh;
+    z-index: 1;
+}
+.container-history-home{
+    display: flex;
+    justify-content: center;
+}
+.content-history-home{
+    display: flex;
+    flex-direction: column;
+    padding-top: 5vh;
+    background-color: #c2e0f1c7;
+    width: 90%;
+    height: 50vh;    
+}
+.title-history{
+    text-align: center;
+}
+.history{
+    gap: 2%;
+    padding: 0% 2%;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
