--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -36,7 +36,7 @@ header{
     height: 65%;
     justify-content: space-around;
     align-items: center;
-    border-radius: 20px;
+    border-radius: 2vh;
     background-color: #c2e0f1c7;
 }
 .link-menu-bar{
