--- a/assets/style/Produto.css
+++ b/assets/style/Produto.css
@@ -1,20 +1,7 @@
 /* //////////////////////////// Gerais /////////////////////////////// */
-
-
 body{
     background-image: url('../img/Produtos.png');
-    width: 100%;
 }
-
-.btn{
-    border: solid;
-    width: 15%;
-}
-.text{
-    border: solid;
-    width: 85%;
-}
-
 
 /* ////////////////////////////// Seção de Barcos ///////////////////////////////////////////////////// */
 #secBoats{
@@ -27,6 +14,7 @@ body{
 }
 
 .imgBoat{
+    border-radius: 5%;
     width: 100%;
     height: 100%;
 }
@@ -37,24 +25,25 @@ body{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    border: solid;
-    width: 25%;
+    width: 20%;
     border-radius: 2vh;
     background-color: #c2e0f1c7;
 }
 
 .divImgBoat{
-    border: solid;
-    border-radius: 5%;
-    width: 75%;
+    border-radius: 2vh;
+    width: 85%;
     height: 60%;
 }
 
 .planoBoat{
     display: flex;
-    border: solid;
-    width: 90%;
+    flex-direction: column;
+    /* border: solid; */
+    width: 70%;
     height: 30%;
+    font-size: 2.5vh;
+    line-height: 150%;
 }
 
 
@@ -75,20 +64,29 @@ body{
     padding-right: 1vw;
     justify-content: space-between;
     align-items: center;
-    border: solid black;
     width: 100%;
     height: 95%;
     border-radius: 2vh;
     background-color: #c2e0f1c7;
 }
 
-.divImgMergulho, .planoMergulho{
-    border: solid;
-    border-radius: 5%;
+.divImgMergulho{
     width: 25%;
     height: 90%;
 }
 
 .planoMergulho{
+    width: 35%;
+    height: 90%;
     display: flex;
+    flex-direction: column;
+    font-size: 3vh;
+    line-height: 130%;
+    
+}
+
+.imgMergulho{
+    border-radius: 2vh;
+    width: 100%;
+    height: 100%;
 }
