Modificação do button para gerar animação via código CSS

--- a/assets/style/contato.css
+++ b/assets/style/contato.css
@@ -63,8 +63,25 @@ body {
     height: 5vh;
   }
 
+
+
   .img-btn-submit{
     width: 30%;
+    
+  }
+
+ button:hover img{
+    animation: barquinho 2s infinite;
+  }
+
+  @keyframes barquinho{
+    from{margin-left: -80px;
+      opacity: 1;
+    }
+    to{
+      margin-left: 90px;
+      opacity: 0;
+    }
   }
   
   /* Ajuste da text-area */
