Alteração final do botão no CSS página contato

--- a/assets/style/contato.css
+++ b/assets/style/contato.css
@@ -54,28 +54,26 @@ body {
   /* Tag para ajuste do botão */
   button {
     border: none;
+    background: none;
     display: flex;
     align-items: center;
-    justify-content: center;
     border-radius: 2vh;
     font-size:2.5vh ;
-    width: 55%;
+    width: 60%;
     height: 5vh;
   }
 
-
-
   .img-btn-submit{
     width: 30%;
-    
   }
 
  button:hover img{
-    animation: barquinho 2s infinite;
+  animation: barquinho 2s infinite;
   }
 
+
   @keyframes barquinho{
-    from{margin-left: -80px;
+    from{
       opacity: 1;
     }
     to{
@@ -99,5 +97,3 @@ body {
     height: 15vh;
     border-radius: 2vh;
   }
-  
-
