--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Sofia+Sans+Extra+Condensed&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -22,6 +24,8 @@ header{
     height: 20%;
     justify-content: space-evenly;
     align-items: center;
+
+    font-family: 'Indie Flower', cursive;
 }
 .logo{
     height: 65%;
@@ -45,6 +49,7 @@ header{
 main{
     width: 100%;
     height: 75%;
+    font-family: 'Sofia Sans Extra Condensed', sans-serif;
 }
 /*///////////////////////// footer /////////////////////*/
 footer{
@@ -56,6 +61,7 @@ footer{
     justify-content: space-between;
     align-items: center;
     text-align: end;
+    font-family: 'Sofia Sans Extra Condensed', sans-serif;
 }
 .img-footer{
     display: flex;
