--- a/assets/style/Produto.css
+++ b/assets/style/Produto.css
@@ -10,7 +10,16 @@ body{
     width: 80%;
     height: 60%;
     justify-content: space-between;
-    
+}
+
+.buttonNavigation{
+    display: flex;
+    justify-content: center;
+    display: none;
+}
+
+.buttonNavigation img{
+    width: 30px;
 }
 
 .imgBoat{
@@ -21,6 +30,7 @@ body{
 
 
 .boat{
+    transition: 0.5s;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -31,6 +41,8 @@ body{
 }
 
 .divImgBoat{
+    display: flex;
+    justify-content: center;
     border-radius: 2vh;
     width: 85%;
     height: 60%;
@@ -42,7 +54,7 @@ body{
     /* border: solid; */
     width: 70%;
     height: 30%;
-    font-size: 2.5vh;
+    font-size: 2vh;
     line-height: 150%;
 }
 
@@ -80,7 +92,7 @@ body{
     height: 90%;
     display: flex;
     flex-direction: column;
-    font-size: 3vh;
+    font-size: 2.5vh;
     line-height: 130%;
     
 }
