--- a/assets/style/headerFooter.css
+++ b/assets/style/headerFooter.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Sofia+Sans+Extra+Condensed&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -13,6 +15,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    font-family: 'Sofia Sans Extra Condensed', sans-serif;
 }
 /* //////////////////////// Cabeçalho //////////////////// */
 /* Atribuindo proprieades da div que contém o cabeçalho */
@@ -67,6 +70,7 @@ header{
     align-items: center;
     border-radius: 2vh;
     background-color: #c2e0f1c7;
+    font-family: 'Indie Flower', cursive;
 }
 .link-menu-bar{
     text-decoration: none;
