--- a/assets/style/headerFooter.css
+++ b/assets/style/headerFooter.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -24,6 +25,7 @@ header{
     height: 20%;
     justify-content: space-evenly;
     align-items: center;
+    font-family: 'Indie Flower', cursive;
 }
 
 #iconMenuMobile{
