--- a/assets/style/Produto.css
+++ b/assets/style/Produto.css
@@ -102,3 +102,133 @@ body{
     width: 100%;
     height: 100%;
 }
+
+
+@media screen and (max-width: 1550px){
+    .menu-bar ul li{
+        font-size: 2vh;
+    }
+    .boat{
+    transition: 0.5s;
+    width: 20%;
+    }
+
+    .planoBoat{
+        font-size: 2vh;
+    }
+
+    .planoMergulho{
+        font-size: 2vh;
+    }
+
+}
+
+
+
+@media screen and (max-width: 850px){
+    .buttonNavigation{
+        display: flex;
+        align-items: center;
+        width: 10%;
+    }
+
+    .boat{
+    transition: 0.5s;
+    width: 37%;
+    }
+
+   
+    .planoBoat{
+        font-size: 2vh;
+    }
+
+    #jetSki{
+        display: none;
+    }
+    
+    #secBoats{
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    #secMergulho{
+        width: 75%;
+        justify-content: center;
+    }
+
+    .planoMergulho{
+        width: 45%;
+    }
+
+    .divImgMergulho{
+        width: 50%;
+    }
+    
+
+    #imgMergulho2{
+        display: none;
+    }
+    
+}
+
+    @media screen and (max-width: 450px){
+        .buttonNavigation img{
+            width: 15px;
+        }
+
+        .boat{
+        transition: 0.5s;
+        width: 80%;
+        }
+    
+        .planoBoat{
+            font-size: 2vh;
+        }
+    
+        #jetSki, #veleiro{
+            display: none;
+        }
+
+        
+        #secBoats{
+            justify-content: space-evenly;
+            width: 95%;
+        }
+
+        .boat{
+            width: 100%;
+        }
+
+        .imgBoat{
+            border-radius: 5%;
+            width: 90%;
+            height: 100%;
+        }
+
+        #secMergulho{
+            width: 80%;
+        }
+        .planoMergulho{
+            font-size: 1.5vh;
+        }
+
+        #byFor{
+            font-size: 1.5vh;
+        }
+        #numberContact{
+            font-size: 1.5vh;
+        }
+        #icon-insta{
+            height: 4vh;
+        }
+        #icon-whats{
+            
+            height: 4.5vh;
+        }
+        .img-footer{
+            padding-top: 0.2rem;
+            display: flex;
+            align-items: center;
+            width: 15vw;
+        }
+    }
