--- a/assets/style/contato.css
+++ b/assets/style/contato.css
@@ -20,7 +20,7 @@ body {
     align-items: center;
     justify-content: space-around;
     padding: 2%;
-    width: 90%;
+    width: 40%;
     height: 90%;
     background-color: #c2e0f1c7;
     border-radius: 2vh;
@@ -104,8 +104,7 @@ body {
 
 
 /* Responsividade formulário mobile*/
-
-@media screen and (min-width: 767px) {
+@media screen and (max-width: 767px) {
   .div-input{
     width: 80%;
   }
@@ -116,7 +115,7 @@ body {
     width: 80%;
   }
   form{
-    width: 45%;
+    width: 80%;
   }
 }
 /* Responsividade formulário tablet*/
@@ -135,5 +134,30 @@ body {
   }
 }
 
+/* Ajuste erro e acerto digitação formulário JS */
+.div-input-error{
+  width:80%;
+  display: flex;
+  flex-direction: column;
+}
+
+.div-input-error .label-input{
+  color: red;
+}
+
+.div-input-set{
+  width:80%;
+  display: flex;
+  flex-direction: column;
+}
+
+.div-input-set span{
+    color:#2e770f;
+}
+
+.div-input-set .label-input{
+   border-color:#2e770f;
+
+}
 
 
