--- a/assets/style/Produto.css
+++ b/assets/style/Produto.css
@@ -1,10 +1,11 @@
+/* Exibição em modo deskTop */
 /* //////////////////////////// Gerais /////////////////////////////// */
-body{
+body {
     background-image: url('../img/Produtos.png');
 }
 
 /* ////////////////////////////// Seção de Barcos ///////////////////////////////////////////////////// */
-#secBoats{
+#secBoats {
     margin: 0 auto;
     display: flex;
     width: 80%;
@@ -12,24 +13,24 @@ body{
     justify-content: space-between;
 }
 
-.buttonNavigation{
+.buttonNavigation {
     display: flex;
     justify-content: center;
     display: none;
 }
 
-.buttonNavigation img{
+.buttonNavigation img {
     width: 30px;
 }
 
-.imgBoat{
+.imgBoat {
     border-radius: 5%;
     width: 100%;
     height: 100%;
 }
 
 
-.boat{
+.boat {
     transition: 0.5s;
     display: flex;
     flex-direction: column;
@@ -40,7 +41,7 @@ body{
     background-color: #c2e0f1c7;
 }
 
-.divImgBoat{
+.divImgBoat {
     display: flex;
     justify-content: center;
     border-radius: 2vh;
@@ -48,7 +49,7 @@ body{
     height: 60%;
 }
 
-.planoBoat{
+.planoBoat {
     display: flex;
     flex-direction: column;
     /* border: solid; */
@@ -61,16 +62,16 @@ body{
 
 
 /* ////////////////////////////////// Seção de Mergulho /////////////////////////////////////////////// */
-#secMergulho{
+#secMergulho {
     margin: 0 auto;
     display: flex;
     align-items: center;
     width: 80%;
     height: 40%;
-    
+
 }
 
-.mergulho{
+.mergulho {
     display: flex;
     padding-left: 1vw;
     padding-right: 1vw;
@@ -82,153 +83,161 @@ body{
     background-color: #c2e0f1c7;
 }
 
-.divImgMergulho{
+.divImgMergulho {
     width: 25%;
     height: 90%;
 }
 
-.planoMergulho{
+.planoMergulho {
     width: 35%;
     height: 90%;
     display: flex;
     flex-direction: column;
     font-size: 2.5vh;
     line-height: 130%;
-    
+
 }
 
-.imgMergulho{
+.imgMergulho {
     border-radius: 2vh;
     width: 100%;
     height: 100%;
 }
 
-
-@media screen and (max-width: 1550px){
-    .menu-bar ul li{
-        font-size: 2vh;
-    }
-    .boat{
-    transition: 0.5s;
-    width: 20%;
-    }
-
-    .planoBoat{
+/* Exibição em modo Tablet */
+@media screen and (max-width: 1550px) {
+    .menu-bar ul li {
         font-size: 2vh;
     }
 
-    .planoMergulho{
+    .boat {
+        transition: 0.5s;
+        width: 20%;
+    }
+
+    .planoBoat {
+        font-size: 2vh;
+    }
+
+    .planoMergulho {
         font-size: 2vh;
     }
 
 }
 
 
-
-@media screen and (max-width: 850px){
-    .buttonNavigation{
+/* Exibição em modo Tablet 2 */
+@media screen and (max-width: 850px) {
+    .buttonNavigation {
         display: flex;
         align-items: center;
         width: 10%;
     }
 
-    .boat{
-    transition: 0.5s;
-    width: 37%;
+    .boat {
+        transition: 0.5s;
+        width: 37%;
     }
 
-   
-    .planoBoat{
+
+    .planoBoat {
         font-size: 2vh;
     }
 
-    #jetSki{
+    #jetSki {
         display: none;
     }
-    
-    #secBoats{
+
+    #secBoats {
         width: 100%;
         justify-content: space-between;
     }
 
-    #secMergulho{
+    #secMergulho {
         width: 75%;
         justify-content: center;
     }
 
-    .planoMergulho{
+    .planoMergulho {
         width: 45%;
     }
 
-    .divImgMergulho{
+    .divImgMergulho {
         width: 50%;
     }
-    
 
-    #imgMergulho2{
+
+    #imgMergulho2 {
         display: none;
     }
-    
+
 }
 
-    @media screen and (max-width: 450px){
-        .buttonNavigation img{
-            width: 15px;
-        }
+/* Exibição em modo Celular */
+@media screen and (max-width: 450px) {
+    .buttonNavigation img {
+        width: 15px;
+    }
 
-        .boat{
+    .boat {
         transition: 0.5s;
         width: 80%;
-        }
-    
-        .planoBoat{
-            font-size: 2vh;
-        }
-    
-        #jetSki, #veleiro{
-            display: none;
-        }
-
-        
-        #secBoats{
-            justify-content: space-evenly;
-            width: 95%;
-        }
-
-        .boat{
-            width: 100%;
-        }
-
-        .imgBoat{
-            border-radius: 5%;
-            width: 90%;
-            height: 100%;
-        }
-
-        #secMergulho{
-            width: 80%;
-        }
-        .planoMergulho{
-            font-size: 1.5vh;
-        }
-
-        #byFor{
-            font-size: 1.5vh;
-        }
-        #numberContact{
-            font-size: 1.5vh;
-        }
-        #icon-insta{
-            height: 4vh;
-        }
-        #icon-whats{
-            
-            height: 4.5vh;
-        }
-        .img-footer{
-            padding-top: 0.2rem;
-            display: flex;
-            align-items: center;
-            width: 15vw;
-        }
     }
+
+    .planoBoat {
+        font-size: 2vh;
+    }
+
+    #jetSki,
+    #veleiro {
+        display: none;
+    }
+
+
+    #secBoats {
+        justify-content: space-evenly;
+        width: 95%;
+    }
+
+    .boat {
+        width: 100%;
+    }
+
+    .imgBoat {
+        border-radius: 5%;
+        width: 90%;
+        height: 100%;
+    }
+
+    #secMergulho {
+        width: 80%;
+    }
+
+    .planoMergulho {
+        font-size: 1.5vh;
+    }
+
+    #byFor {
+        font-size: 1.5vh;
+    }
+
+    #numberContact {
+        font-size: 1.5vh;
+    }
+
+    #icon-insta {
+        height: 4vh;
+    }
+
+    #icon-whats {
+
+        height: 4.5vh;
+    }
+
+    .img-footer {
+        padding-top: 0.2rem;
+        display: flex;
+        align-items: center;
+        width: 15vw;
+    }
+}
