--- a/assets/style/headerFooter.css
+++ b/assets/style/headerFooter.css
@@ -108,7 +108,7 @@ footer{
     font-size: 2.5vh;
 }
 
-
+/* Exibição em modo Tablet */
 @media screen and (min-width: 768px) and (max-width: 1024px){
 
     header{
@@ -159,7 +159,7 @@ footer{
 
 }
 
-
+/* Exibição em modo Celular */
 @media screen and (max-width: 767px){
     header{
         padding: 0 2.5rem 0 2rem;
