--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,3 +1,4 @@
+/* Exibição DeskTop */
 main{
     display: flex;
     justify-content: space-between;
@@ -40,7 +41,7 @@ main{
     height: 70%;
 }
 
-
+/* Exibição em modo Celular */
 @media screen and (max-width: 767px){
     main{
         height: 75%;
@@ -85,6 +86,7 @@ main{
 
 }
 
+/* Exibição em modo Tablet */
 @media (min-width: 768px) and (max-width: 1024px){
     main{
         height: 75%;
